fix the structure of my branch to fit the rest of the project