@@ -4,47 +4,60 @@ import jakarta.servlet.http.*;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 import io.jsonwebtoken.*;
+import samoprodej.samoprodej.Entity.User;
+import samoprodej.samoprodej.Repository.UserRepository;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
+    private final UserRepository userRepository;
 
-    public JwtAuthFilter(JwtService jwtService) {
+    public JwtAuthFilter(JwtService jwtService, UserRepository userRepository) {
         this.jwtService = jwtService;
+        this.userRepository = userRepository;
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) throws ServletException, IOException {
 
-        String auth = req.getHeader("Authorization");
-        if (auth == null || !auth.startsWith("Bearer ")) {
-            chain.doFilter(req, res);
+        String header = request.getHeader("Authorization");
+        if (header == null || !header.startsWith("Bearer ")) {
+            filterChain.doFilter(request, response);
             return;
         }
 
-        String token = auth.substring(7);
+        String token = header.substring(7);
 
         try {
-            Claims claims = jwtService.parse(token).getBody();
-            String email = claims.getSubject();
-            String role = String.valueOf(claims.get("role"));
+            String sub = jwtService.extractSubject(token);
+            UUID userId = UUID.fromString(sub);
 
-            var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
-            var authentication = new UsernamePasswordAuthenticationToken(email, null, authorities);
-
-            SecurityContextHolder.getContext().setAuthentication(authentication);
-        } catch (JwtException e) {
-            SecurityContextHolder.clearContext();
+            if (SecurityContextHolder.getContext().getAuthentication() == null) {
+                User user = userRepository.findById(userId).orElse(null);
+                if (user != null) {
+                    var auth = new UsernamePasswordAuthenticationToken(
+                            userId, null, Collections.emptyList()
+                    );
+                    auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                    SecurityContextHolder.getContext().setAuthentication(auth);
+                }
+            }
+        } catch (Exception ignored) {
+            // при ошибке токена просто не аутентифицируем; можно вернуть 401, но проще начать так
         }
 
-        chain.doFilter(req, res);
+        filterChain.doFilter(request, response);
     }
 }
